lib/src/gen/antlr/dscriptParser.dart
// Generated from dscript.g4 by ANTLR 4.13.2
// ignore_for_file: unused_import, unused_local_variable, prefer_single_quotes
import 'package:antlr4/antlr4.dart';

import 'dscriptListener.dart';
import 'dscriptBaseListener.dart';
import 'dscriptVisitor.dart';
import 'dscriptBaseVisitor.dart';
const int RULE_script = 0, RULE_metadata = 1, RULE_author = 2, RULE_description = 3, 
          RULE_version = 4, RULE_license = 5, RULE_repo = 6, RULE_website = 7, 
          RULE_name = 8, RULE_permissions = 9, RULE_permission = 10, RULE_contract = 11, 
          RULE_hook = 12, RULE_impl = 13, RULE_func = 14, RULE_params = 15, 
          RULE_param = 16, RULE_dataType = 17, RULE_stmt = 18, RULE_throwStmt = 19, 
          RULE_ifStmt = 20, RULE_elseStmt = 21, RULE_whileStmt = 22, RULE_forStmt = 23, 
          RULE_returnStmt = 24, RULE_breakStmt = 25, RULE_continueStmt = 26, 
          RULE_switchStmt = 27, RULE_caseStmt = 28, RULE_defaultStmt = 29, 
          RULE_tryStmt = 30, RULE_catchBlock = 31, RULE_line = 32, RULE_varType = 33, 
          RULE_assignment = 34, RULE_simpleAssignment = 35, RULE_compoundAssignment = 36, 
          RULE_propertyAssignment = 37, RULE_indexAssignment = 38, RULE_indexPropertyAssignment = 39, 
          RULE_varDecl = 40, RULE_expr = 41, RULE_logicalExpr = 42, RULE_relationalExpr = 43, 
          RULE_bitwiseExpr = 44, RULE_shiftExpr = 45, RULE_additiveExpr = 46, 
          RULE_multiplicativeExpr = 47, RULE_unaryExpr = 48, RULE_primaryExpr = 49, 
          RULE_externalFunctionCall = 50, RULE_functionCall = 51, RULE_args = 52, 
          RULE_namedArg = 53, RULE_positionalArg = 54, RULE_literal = 55, 
          RULE_identifier = 56, RULE_arrayLiteral = 57, RULE_objectLiteral = 58, 
          RULE_objectProperty = 59, RULE_mapLiteral = 60, RULE_mapEntry = 61, 
          RULE_block = 62;
class dscriptParser extends Parser {
  static final checkVersion = () => RuntimeMetaData.checkVersion('4.13.2', RuntimeMetaData.VERSION);
  static const int TOKEN_EOF = IntStream.EOF;

  static final List<DFA> _decisionToDFA = List.generate(
      _ATN.numberOfDecisions, (i) => DFA(_ATN.getDecisionState(i), i));
  static final PredictionContextCache _sharedContextCache = PredictionContextCache();
  static const int TOKEN_PLUS = 1, TOKEN_MINUS = 2, TOKEN_MULTIPLY = 3, 
                   TOKEN_DIVIDE = 4, TOKEN_MOD = 5, TOKEN_OPEN_PAREN = 6, 
                   TOKEN_CLOSE_PAREN = 7, TOKEN_OPEN_BRACE = 8, TOKEN_CLOSE_BRACE = 9, 
                   TOKEN_OPEN_BRACKET = 10, TOKEN_CLOSE_BRACKET = 11, TOKEN_GT = 12, 
                   TOKEN_LT = 13, TOKEN_EQ = 14, TOKEN_ASSIGN = 15, TOKEN_NE = 16, 
                   TOKEN_GTE = 17, TOKEN_LTE = 18, TOKEN_COLON = 19, TOKEN_DOUBLE_COLON = 20, 
                   TOKEN_COMMA = 21, TOKEN_SEMI = 22, TOKEN_AND = 23, TOKEN_OR = 24, 
                   TOKEN_NOT = 25, TOKEN_BIT_AND = 26, TOKEN_BIT_OR = 27, 
                   TOKEN_BIT_XOR = 28, TOKEN_BIT_NOT = 29, TOKEN_BIT_LEFT_SHIFT = 30, 
                   TOKEN_BIT_RIGHT_SHIFT = 31, TOKEN_ARROW = 32, TOKEN_Q = 33, 
                   TOKEN_DOT = 34, TOKEN_PLUS_ASSIGN = 35, TOKEN_MINUS_ASSIGN = 36, 
                   TOKEN_MULTIPLY_ASSIGN = 37, TOKEN_DIVIDE_ASSIGN = 38, 
                   TOKEN_MOD_ASSIGN = 39, TOKEN_PLUS_PLUS = 40, TOKEN_MINUS_MINUS = 41, 
                   TOKEN_AT = 42, TOKEN_DOLLAR = 43, TOKEN_AUTHOR = 44, 
                   TOKEN_DESCRIPTION = 45, TOKEN_VERSION = 46, TOKEN_LICENSE = 47, 
                   TOKEN_REPO = 48, TOKEN_WEBSITE = 49, TOKEN_NAME = 50, 
                   TOKEN_PERMISSIONS = 51, TOKEN_CONTRACT = 52, TOKEN_IMPL = 53, 
                   TOKEN_HOOK = 54, TOKEN_FUNC = 55, TOKEN_LIST = 56, TOKEN_MAP = 57, 
                   TOKEN_IF = 58, TOKEN_ELSE = 59, TOKEN_WHILE = 60, TOKEN_FOR = 61, 
                   TOKEN_IN = 62, TOKEN_DO = 63, TOKEN_RETURN = 64, TOKEN_BREAK = 65, 
                   TOKEN_CONTINUE = 66, TOKEN_SWITCH = 67, TOKEN_CASE = 68, 
                   TOKEN_DEFAULT = 69, TOKEN_TRY = 70, TOKEN_CATCH = 71, 
                   TOKEN_THROW = 72, TOKEN_FINAL = 73, TOKEN_CONST = 74, 
                   TOKEN_VAR = 75, TOKEN_SEMVER = 76, TOKEN_BOOL = 77, TOKEN_NULL = 78, 
                   TOKEN_INT = 79, TOKEN_DOUBLE = 80, TOKEN_IDENT = 81, 
                   TOKEN_STRING = 82, TOKEN_WS = 83, TOKEN_COMMENT = 84, 
                   TOKEN_DOC_COMMENT = 85;

  @override
  final List<String> ruleNames = [
    'script', 'metadata', 'author', 'description', 'version', 'license', 
    'repo', 'website', 'name', 'permissions', 'permission', 'contract', 
    'hook', 'impl', 'func', 'params', 'param', 'dataType', 'stmt', 'throwStmt', 
    'ifStmt', 'elseStmt', 'whileStmt', 'forStmt', 'returnStmt', 'breakStmt', 
    'continueStmt', 'switchStmt', 'caseStmt', 'defaultStmt', 'tryStmt', 
    'catchBlock', 'line', 'varType', 'assignment', 'simpleAssignment', 'compoundAssignment', 
    'propertyAssignment', 'indexAssignment', 'indexPropertyAssignment', 
    'varDecl', 'expr', 'logicalExpr', 'relationalExpr', 'bitwiseExpr', 'shiftExpr', 
    'additiveExpr', 'multiplicativeExpr', 'unaryExpr', 'primaryExpr', 'externalFunctionCall', 
    'functionCall', 'args', 'namedArg', 'positionalArg', 'literal', 'identifier', 
    'arrayLiteral', 'objectLiteral', 'objectProperty', 'mapLiteral', 'mapEntry', 
    'block'
  ];

  static final List<String?> _LITERAL_NAMES = [
      null, "'+'", "'-'", "'*'", "'/'", "'%'", "'('", "')'", "'{'", "'}'", 
      "'['", "']'", "'>'", "'<'", "'=='", "'='", "'!='", "'>='", "'<='", 
      "':'", "'::'", "','", "';'", "'&&'", "'||'", "'!'", "'&'", "'|'", 
      "'^'", "'~'", "'<<'", "'>>'", "'->'", "'?'", "'.'", "'+='", "'-='", 
      "'*='", "'/='", "'%='", "'++'", "'--'", "'@'", "'\$'", "'author'", 
      "'description'", "'version'", "'license'", "'repo'", "'website'", 
      "'name'", "'permissions'", "'contract'", "'impl'", "'hook'", "'func'", 
      "'List'", "'Map'", "'if'", "'else'", "'while'", "'for'", "'in'", "'do'", 
      "'return'", "'break'", "'continue'", "'switch'", "'case'", "'default'", 
      "'try'", "'catch'", "'throw'", "'final'", "'const'", "'var'", null, 
      null, "'null'"
  ];
  static final List<String?> _SYMBOLIC_NAMES = [
      null, "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "MOD", "OPEN_PAREN", 
      "CLOSE_PAREN", "OPEN_BRACE", "CLOSE_BRACE", "OPEN_BRACKET", "CLOSE_BRACKET", 
      "GT", "LT", "EQ", "ASSIGN", "NE", "GTE", "LTE", "COLON", "DOUBLE_COLON", 
      "COMMA", "SEMI", "AND", "OR", "NOT", "BIT_AND", "BIT_OR", "BIT_XOR", 
      "BIT_NOT", "BIT_LEFT_SHIFT", "BIT_RIGHT_SHIFT", "ARROW", "Q", "DOT", 
      "PLUS_ASSIGN", "MINUS_ASSIGN", "MULTIPLY_ASSIGN", "DIVIDE_ASSIGN", 
      "MOD_ASSIGN", "PLUS_PLUS", "MINUS_MINUS", "AT", "DOLLAR", "AUTHOR", 
      "DESCRIPTION", "VERSION", "LICENSE", "REPO", "WEBSITE", "NAME", "PERMISSIONS", 
      "CONTRACT", "IMPL", "HOOK", "FUNC", "LIST", "MAP", "IF", "ELSE", "WHILE", 
      "FOR", "IN", "DO", "RETURN", "BREAK", "CONTINUE", "SWITCH", "CASE", 
      "DEFAULT", "TRY", "CATCH", "THROW", "FINAL", "CONST", "VAR", "SEMVER", 
      "BOOL", "NULL", "INT", "DOUBLE", "IDENT", "STRING", "WS", "COMMENT", 
      "DOC_COMMENT"
  ];
  static final Vocabulary VOCABULARY = VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  @override
  Vocabulary get vocabulary {
    return VOCABULARY;
  }

  @override
  String get grammarFileName => 'dscript.g4';

  @override
  List<int> get serializedATN => _serializedATN;

  @override
  ATN getATN() {
   return _ATN;
  }

  dscriptParser(TokenStream input) : super(input) {
    interpreter = ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  ScriptContext script() {
    dynamic _localctx = ScriptContext(context, state);
    enterRule(_localctx, 0, RULE_script);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 129;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while ((((_la) & ~0x3f) == 0 && ((1 << _la) & 2234207627640832) != 0)) {
        state = 126;
        metadata();
        state = 131;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 135;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_PERMISSIONS) {
        state = 132;
        permissions();
        state = 137;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 138;
      contract();
      state = 139;
      match(TOKEN_EOF);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  MetadataContext metadata() {
    dynamic _localctx = MetadataContext(context, state);
    enterRule(_localctx, 2, RULE_metadata);
    try {
      state = 148;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
      case TOKEN_NAME:
        enterOuterAlt(_localctx, 1);
        state = 141;
        name();
        break;
      case TOKEN_DESCRIPTION:
        enterOuterAlt(_localctx, 2);
        state = 142;
        description();
        break;
      case TOKEN_AUTHOR:
        enterOuterAlt(_localctx, 3);
        state = 143;
        author();
        break;
      case TOKEN_VERSION:
        enterOuterAlt(_localctx, 4);
        state = 144;
        version();
        break;
      case TOKEN_LICENSE:
        enterOuterAlt(_localctx, 5);
        state = 145;
        license();
        break;
      case TOKEN_REPO:
        enterOuterAlt(_localctx, 6);
        state = 146;
        repo();
        break;
      case TOKEN_WEBSITE:
        enterOuterAlt(_localctx, 7);
        state = 147;
        website();
        break;
      default:
        throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  AuthorContext author() {
    dynamic _localctx = AuthorContext(context, state);
    enterRule(_localctx, 4, RULE_author);
    try {
      enterOuterAlt(_localctx, 1);
      state = 150;
      match(TOKEN_AUTHOR);
      state = 151;
      match(TOKEN_STRING);
      state = 152;
      match(TOKEN_SEMI);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  DescriptionContext description() {
    dynamic _localctx = DescriptionContext(context, state);
    enterRule(_localctx, 6, RULE_description);
    try {
      enterOuterAlt(_localctx, 1);
      state = 154;
      match(TOKEN_DESCRIPTION);
      state = 155;
      match(TOKEN_STRING);
      state = 156;
      match(TOKEN_SEMI);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  VersionContext version() {
    dynamic _localctx = VersionContext(context, state);
    enterRule(_localctx, 8, RULE_version);
    try {
      enterOuterAlt(_localctx, 1);
      state = 158;
      match(TOKEN_VERSION);
      state = 159;
      match(TOKEN_SEMVER);
      state = 160;
      match(TOKEN_SEMI);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  LicenseContext license() {
    dynamic _localctx = LicenseContext(context, state);
    enterRule(_localctx, 10, RULE_license);
    try {
      enterOuterAlt(_localctx, 1);
      state = 162;
      match(TOKEN_LICENSE);
      state = 163;
      match(TOKEN_STRING);
      state = 164;
      match(TOKEN_SEMI);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  RepoContext repo() {
    dynamic _localctx = RepoContext(context, state);
    enterRule(_localctx, 12, RULE_repo);
    try {
      enterOuterAlt(_localctx, 1);
      state = 166;
      match(TOKEN_REPO);
      state = 167;
      match(TOKEN_STRING);
      state = 168;
      match(TOKEN_SEMI);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  WebsiteContext website() {
    dynamic _localctx = WebsiteContext(context, state);
    enterRule(_localctx, 14, RULE_website);
    try {
      enterOuterAlt(_localctx, 1);
      state = 170;
      match(TOKEN_WEBSITE);
      state = 171;
      match(TOKEN_STRING);
      state = 172;
      match(TOKEN_SEMI);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  NameContext name() {
    dynamic _localctx = NameContext(context, state);
    enterRule(_localctx, 16, RULE_name);
    try {
      enterOuterAlt(_localctx, 1);
      state = 174;
      match(TOKEN_NAME);
      state = 175;
      match(TOKEN_STRING);
      state = 176;
      match(TOKEN_SEMI);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  PermissionsContext permissions() {
    dynamic _localctx = PermissionsContext(context, state);
    enterRule(_localctx, 18, RULE_permissions);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 178;
      match(TOKEN_PERMISSIONS);
      state = 179;
      permission();
      state = 184;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_COMMA) {
        state = 180;
        match(TOKEN_COMMA);
        state = 181;
        permission();
        state = 186;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 187;
      match(TOKEN_SEMI);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  PermissionContext permission() {
    dynamic _localctx = PermissionContext(context, state);
    enterRule(_localctx, 20, RULE_permission);
    try {
      enterOuterAlt(_localctx, 1);
      state = 189;
      _localctx.namespace = identifier();
      state = 190;
      match(TOKEN_DOUBLE_COLON);
      state = 191;
      _localctx.perm = identifier();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ContractContext contract() {
    dynamic _localctx = ContractContext(context, state);
    enterRule(_localctx, 22, RULE_contract);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 193;
      match(TOKEN_CONTRACT);
      state = 194;
      identifier();
      state = 195;
      match(TOKEN_OPEN_BRACE);
      state = 201;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while ((((_la) & ~0x3f) == 0 && ((1 << _la) & 63050394783186944) != 0)) {
        state = 199;
        errorHandler.sync(this);
        switch (tokenStream.LA(1)!) {
        case TOKEN_HOOK:
          state = 196;
          hook();
          break;
        case TOKEN_IMPL:
          state = 197;
          impl();
          break;
        case TOKEN_FUNC:
          state = 198;
          func();
          break;
        default:
          throw NoViableAltException(this);
        }
        state = 203;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 204;
      match(TOKEN_CLOSE_BRACE);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  HookContext hook() {
    dynamic _localctx = HookContext(context, state);
    enterRule(_localctx, 24, RULE_hook);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 206;
      match(TOKEN_HOOK);
      state = 207;
      identifier();
      state = 208;
      match(TOKEN_OPEN_PAREN);
      state = 210;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (((((_la - 44)) & ~0x3f) == 0 && ((1 << (_la - 44)) & 137438969855) != 0)) {
        state = 209;
        params();
      }

      state = 212;
      match(TOKEN_CLOSE_PAREN);
      state = 213;
      block();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ImplContext impl() {
    dynamic _localctx = ImplContext(context, state);
    enterRule(_localctx, 26, RULE_impl);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 215;
      match(TOKEN_IMPL);
      state = 216;
      identifier();
      state = 217;
      match(TOKEN_OPEN_PAREN);
      state = 219;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (((((_la - 44)) & ~0x3f) == 0 && ((1 << (_la - 44)) & 137438969855) != 0)) {
        state = 218;
        params();
      }

      state = 221;
      match(TOKEN_CLOSE_PAREN);
      state = 222;
      match(TOKEN_ARROW);
      state = 223;
      dataType();
      state = 224;
      block();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  FuncContext func() {
    dynamic _localctx = FuncContext(context, state);
    enterRule(_localctx, 28, RULE_func);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 226;
      match(TOKEN_FUNC);
      state = 227;
      identifier();
      state = 228;
      match(TOKEN_OPEN_PAREN);
      state = 230;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (((((_la - 44)) & ~0x3f) == 0 && ((1 << (_la - 44)) & 137438969855) != 0)) {
        state = 229;
        params();
      }

      state = 232;
      match(TOKEN_CLOSE_PAREN);
      state = 233;
      match(TOKEN_ARROW);
      state = 234;
      dataType();
      state = 235;
      block();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ParamsContext params() {
    dynamic _localctx = ParamsContext(context, state);
    enterRule(_localctx, 30, RULE_params);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 237;
      param();
      state = 242;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_COMMA) {
        state = 238;
        match(TOKEN_COMMA);
        state = 239;
        param();
        state = 244;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ParamContext param() {
    dynamic _localctx = ParamContext(context, state);
    enterRule(_localctx, 32, RULE_param);
    try {
      enterOuterAlt(_localctx, 1);
      state = 245;
      dataType();
      state = 246;
      identifier();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  DataTypeContext dataType() {
    dynamic _localctx = DataTypeContext(context, state);
    enterRule(_localctx, 34, RULE_dataType);
    int _la;
    try {
      state = 268;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 13, context)) {
      case 1:
        enterOuterAlt(_localctx, 1);
        state = 248;
        identifier();
        state = 250;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_Q) {
          state = 249;
          match(TOKEN_Q);
        }

        break;
      case 2:
        enterOuterAlt(_localctx, 2);
        state = 252;
        match(TOKEN_LIST);
        state = 253;
        match(TOKEN_LT);
        state = 254;
        dataType();
        state = 255;
        match(TOKEN_GT);
        state = 257;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_Q) {
          state = 256;
          match(TOKEN_Q);
        }

        break;
      case 3:
        enterOuterAlt(_localctx, 3);
        state = 259;
        match(TOKEN_MAP);
        state = 260;
        match(TOKEN_LT);
        state = 261;
        dataType();
        state = 262;
        match(TOKEN_COMMA);
        state = 263;
        dataType();
        state = 264;
        match(TOKEN_GT);
        state = 266;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_Q) {
          state = 265;
          match(TOKEN_Q);
        }

        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }
